samples/_failures_safe/1761152348_eea0e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4d2331b.c: In function ‘run_simulation_step’:
./samples/SAFE/__tmp_b4d2331b.c:114:5: error: expected expression at end of input
  114 |     if (sim == NULL || transform == NULL)
      |     ^~
./samples/SAFE/__tmp_b4d2331b.c:114:5: error: expected declaration or statement at end of input
